# miniBase

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  IMPORT_EXPORT_COMPLETION_REPORT.md  README.md  backups.sql  bench.ps1  check_bin_structure.cpp  dump.sql  dump_all.sql  dump_structure.sql  minidb.db  minidb.log.bak  school.db  test.db  test_cli.db  test_create_proc.sql  test_import.sql  test_import_export.sh  test_json.sql
src/: CMakeLists.txt  main.cpp
src/auth/: API_REFERENCE.md  CMakeLists.txt  README.md  auth_service.cpp  auth_service.h  auth_test.cpp  permission_checker.cpp  permission_checker.h  role_manager.cpp  role_manager.h  usage_example.cpp  user_manager.cpp  user_manager.h  user_storage_manager.cpp  user_storage_manager.h
src/catalog/: CMakeLists.txt  catalog.cpp  catalog.h
src/catalog/catalog.dir/Debug/: catalog.lib.recipe
src/cli/: AuthCLI.cpp  AuthCLI.h  CMakeLists.txt  MiniCLI.cpp  MiniCLI.h  minidb_cli.cpp
src/cli/minidb/: cli_helpers.cpp  cli_helpers.h  command_handlers.cpp  command_handlers.h  execution_pipeline.cpp  execution_pipeline.h  input_accumulator.cpp  input_accumulator.h  user_management.cpp  user_management.h
src/engine/: CMakeLists.txt
src/engine/executor/: Executor.cpp  Executor.h
src/engine/operators/: Executor.cpp  Executor.h  Page.h  PlanNode.h  Row.h  operators.cpp  operators.h  plan_node.h
src/frontend/parser/: SQLParser.cpp  SQLParser.h
src/frontend/translator/: CMakeLists.txt  json_to_plan.cpp  json_to_plan.h
src/minidb.dir/Debug/: minidb.exe.recipe  minidb.ilk
src/minidb.dir/Debug/minidb.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  minidb.lastbuildstate
src/optimizer/: CMakeLists.txt  index_optimizer.cpp  index_optimizer.h  plan_optimizer.cpp  plan_optimizer.h
src/sql_compiler/common/: error_messages.h
src/sql_compiler/lexer/: CMakeLists.txt  README.md  lexer.cpp  lexer.h  lexer_test.cpp  token.h
src/sql_compiler/parser/: CMakeLists.txt  README.md  ast.cpp  ast.h  ast_json_serializer.cpp  ast_json_serializer.h  ast_printer.cpp  ast_printer.h  parser.cpp  parser.h  parser_export.cpp  parser_test.cpp
src/sql_compiler/planner/: CMakeLists.txt  README.md  plan_printer.cpp  plan_printer.h  planner.cpp  planner.h  planner_test.cpp
src/sql_compiler/semantic/: CMakeLists.txt  README.md  semantic_analyzer.cpp  semantic_analyzer.h  semantic_test.cpp
src/storage/: CMakeLists.txt  storage_engine.cpp  storage_engine.h  storage_logger.cpp  storage_logger.h
src/storage/buffer/: CMakeLists.txt  buffer_pool_manager.cpp  buffer_pool_manager.h  lru_replacer.cpp  lru_replacer.h
src/storage/index/: bplus_tree.cpp  bplus_tree.h
src/storage/page/: disk_manager.cpp  disk_manager.h  page.h  page_header.h  page_utils.h  wal_manager.cpp  wal_manager.h
src/tools/: CMakeLists.txt
src/tools/sql_dump/: sql_dumper.cpp  sql_dumper.h
src/tools/sql_import/: sql_importer.cpp  sql_importer.h
src/transaction/: transaction_manager.h
src/util/: CMakeLists.txt  config.cpp  config.h  logger.cpp  logger.h  sql_input_utils.h  status.h  table_utils.h
src/webui/: CMakeLists.txt  httplib.h  index.html  server_main.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  simple_test_framework.cpp  simple_test_framework.h
tests/bplus_tree_split_stress_test.dir/Debug/: bplus_tree_split_stress_test.exe.recipe
tests/bplus_tree_split_stress_test.dir/Debug/bplus_tr.085F2EE5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/bplus_tree_test.dir/Debug/: bplus_tree_test.exe.recipe
tests/bplus_tree_test.dir/Debug/bplus_tree_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/executor_test.dir/Debug/: executor_test.exe.recipe
tests/executor_test.dir/Debug/executor_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/page_linking_test.dir/Debug/: page_linking_test.exe.recipe
tests/page_linking_test.dir/Debug/page_lin.F025563B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
tests/page_types_api_test.dir/Debug/: page_types_api_test.exe.recipe
tests/sql/: TEST_EXECUTION_GUIDE.md  constraints_test.sql  error.sql  executor_test.sql  export.sql  index_usage_test.sql  own.sql  run_all_tests.bat  run_all_tests.sh  test_914.sql  test_comprehensive_basic.sql  test_error_handling.sql  test_import.sql  test_import_export.sql  test_own.sql  test_permissions.sql
tests/storage_end_to_end_demo.dir/Debug/: storage_end_to_end_demo.exe.recipe
tests/storage_size_test.dir/Debug/: storage_size_test.exe.recipe
tests/storage_test.dir/Debug/: storage_test.exe.recipe
tests/test_bplus_tree_enhancements.dir/Debug/: test_bplus_tree_enhancements.exe.recipe
tests/test_storage_enhancements.dir/Debug/: test_storage_enhancements.exe.recipe
tests/unit/: CliTest.cpp  ExecutorTest.cpp  Logger.cpp  Logger.h  auth_storage_test.cpp  auth_test.cpp  bench_storage_rw.cpp  bplus_tree_split_stress_test.cpp  bplus_tree_test.cpp  catalog_test.cpp  cli_test.cpp  compiler_errors_test.cpp  dump_test.cpp  e2e_flow.cpp  executor_test.cpp  import_test.cpp  insert_test.cpp  json_to_plan_test.cpp  minidb_auth_cli.cpp  page_linking_test.cpp  page_types_api_test.cpp  storage_end_to_end_demo.cpp  storage_size_test.cpp  storage_test.cpp  test_auth_bin_structure.cpp  test_auth_interfaces.cpp  test_auth_security.cpp  test_auth_storage_integration.cpp  test_bplus_tree_enhancements.cpp  test_cli.cpp  test_concurrency_correctness.cpp  test_constraint_validation.cpp  test_debug.cpp  test_debug_map.cpp  test_debug_permissions.cpp  test_debug_role.cpp  test_debug_set.cpp  test_executor.cpp  test_executor_delete.cpp  test_executor_insert.cpp  (+23 more)
(+153 files in other folders)
